src/css/profile/mobile/common/gridview.less
tau-gridview {
	.default-list();
}

.ui-gridview {
	position: relative;
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
	list-style: none;

	.ui-gridview-item {
		position: absolute;
		border: 0.25 * @px_base solid var(--grid-border-color);
		box-sizing: border-box;
		opacity: 0;
		border-radius: 26 * @px_base;
		overflow: hidden;

		&.ui-gridview-item-active {
			transition: transform .4s cubic-bezier(.25, .46, .45, 1);
			opacity: 1;
		}

		&.ui-gridview-helper {
			transition: none;
			transform: translate3d(0, 0, 0);
		}

		.ui-gridview-handler {
			display: block;
			position: absolute;
			width: 100%;
			height: 100%;
			left: 0;
			top: 0;
			opacity: 0;
		}

		> label {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;

			&.ui-gridview-image-checked {
				background-color: var(--checkbox-image-checked);
			}

			> input[type="checkbox"] {
				position: absolute;
				margin: 8 * @px_base 0 0 8 * @px_base;
				background-image: url(images/3_Controllers/gallery_btn_uncheck_bg_mtrl.svg);
				background-size: 100%;
				background-repeat: no-repeat;
				opacity: 1;
				&:checked {
					background-image: url(images/3_Controllers/gallery_btn_check_bg_mtrl.svg);
				}
				&::after {
					background-color: var(--color-white);
				}
				&:disabled {
					opacity: 0.4;
				}
			}
		}

		.ui-gridview-image {
			display: block;
			width: 100%;
			height: auto;
			pointer-events: none;
		}

		&.ui-gridview-item-has-label .ui-gridview-image {
			transform: translateY(-28.5 * @px_base);
		}

		.ui-gridview-label {
			position: absolute;
			width: calc(~"100% - "2 * 15 * @px_base);
			margin: auto;
			padding: 0 15 * @px_base;
			.font(regular);
			font-size: 16 * @sp_base;
			color: var(--grid-label-color);
			text-align: left;
			overflow: hidden;
			text-overflow: ellipsis;
			bottom: 0;
			background-color: var(--background-area-color);
			height: 57 * @px_base;
			display: flex;
			flex-direction: column;
			justify-content: center;

			p {
				margin: 0;
				white-space: nowrap;
				text-overflow: ellipsis;
				overflow: hidden;

				&:nth-child(1) {
					font-size: 16 * @sp_base;
					color: var(--grid-label-color);
				}
				&:nth-child(2) {
					margin-top: 3 * @px_base;
					font-size: 13 * @sp_base;
					color: var(--grid-label-secondary-color);
				}
			}
		}

		.ui-gridview-badge {
			position: absolute;
			border-radius: 25 * @px_base;
			min-width: (25 - 14) * @px_base;
			background-color: var(--badge-color);
			color: var(--color-white);
			top: 4.5 * @px_base;
			right: 4.5 * @px_base;
			padding: 3 * @px_base 7 * @px_base;
			font-size: 11 * @sp_base;
			text-align: center;
		}

		&.ui-focus {
			filter: invert(0.2);
		}
	}
	&.ui-gridview-label-in .ui-gridview-label {
		position: absolute;
		bottom: 6 * @px_base;
		display: block;
		color: var(--grid-label-color);
	}

	&.ui-gridview-label-out .ui-gridview-label {
		display: block;
		margin: 0;
		color: var(--grid-label-color);
		margin-bottom: 11.5 * @px_base;
	}

	&.ui-gridview-reorder {
		.ui-gridview-item {
			.ui-gridview-handler {
				opacity: 1;
			}
		}
	}

	&-cols {
		&::after {
			content: "2";
			position: absolute;
			width: 1 * @px_base;
			height: 1 * @px_base;
			opacity: 0;
		}
	}

}

.ui-content:not(.ui-popup-content-gridview) {
	.ui-gridview:not(.ui-gridview-label-out) {
		box-sizing: content-box;

		.ui-gridview-item {
			display: flex;
		}
	}
}

@keyframes grid_show_item {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@media (orientation: portrait) {
	.ui-content:not(.ui-popup-content-gridview) {
		.ui-gridview {
			min-height: 509 * @px_base;
		}
	}
}

@media (orientation: portrait) and (min-width: 480px) and (max-width: 959px) {
	.ui-gridview-cols::after {
		content: "3";
	}
}

@media (orientation: landscape) {
	.ui-gridview-cols::after {
		content: "4";
	}
}
@media (min-width: 960px) {
	.ui-gridview-cols::after {
		content: "5";
	}
}

.ui-popup:not(.ui-ctxpopup):not(.ui-popup-activity) {
	.ui-popup-wrapper {
		width: 100%;
		height: auto;
		overflow: auto;
		border-radius: 26 * @px_base;
		.ui-popup-content.ui-popup-content-gridview {
			padding: 0;
			margin: 0;
			height: 135 * @px_base;
		}

		.ui-popup-content.ui-popup-content-gridview-multiple {
			padding: 0;
			margin: 0;
			height: 252 * @px_base;
		}
	}
}

@media (orientation: landscape) {
	.ui-popup.ui-popup-gridview {
		width: 360 * @px_base;
		left: 70 * @px_base;
	}

	.ui-gridview-image {
		display: block;
		width: 90.5 * @px_base;
		height: 90.5 * @px_base;
		pointer-events: none;
	}
}

@media (min-width: 1920px) {
	.ui-content:not(.ui-popup-content-gridview) {
		.ui-gridview.ui-gridview-label-out {
			min-width: 1920 * @px_base;
			.ui-gridview-item {
				.ui-gridview-image {
					width: 240 * @px_base;
					height: 238 * @px_base;
				}
				.ui-gridview-label {
					height: 39 * @px_base;
					line-height: 39 *@px_base;
					padding: 0 10 * @px_base;
					margin: 0;
					margin-bottom: 23 * @px_base;
				}
			}
		}
		.ui-gridview:not(.ui-gridview-label-out) {
			min-width: 1920 * @px_base;
			.ui-gridview-item {
				width: 240 * @px_base;
				height: 238 * @px_base;
				.ui-gridview-image {
					width: 240 * @px_base;
					height: 238 * @px_base;
				}
				.ui-gridview-label {
					height: 39 * @px_base;
					line-height: 39 *@px_base;
					padding: 0 10 * @px_base;
				}
			}
		}
	}
}

